# docugraph

./: .gitignore  CONTRIBUTING.md  README.md  create_fake_history.bat  flowsettings.py  mkdocs.yml  push_to_github.bat  pyproject.toml
docs/: about.md  index.md  local_model.md  online_install.md  usage.md
docs/development/: contributing.md  create-a-component.md  utilities.md
docs/pages/app/: customize-flows.md  features.md
docs/pages/app/index/: file.md
libs/docugraph/: README.md  pyproject.toml
libs/docugraph/docugraph/: cli.py
libs/docugraph/docugraph/agents/: base.py  langchain_based.py  utils.py
libs/docugraph/docugraph/agents/io/: base.py
libs/docugraph/docugraph/agents/react/: agent.py  prompt.py
libs/docugraph/docugraph/agents/rewoo/: agent.py  planner.py  prompt.py  solver.py
libs/docugraph/docugraph/agents/tools/: base.py  llm.py  mcp.py  wikipedia.py
libs/docugraph/docugraph/base/: component.py  schema.py
libs/docugraph/docugraph/chatbot/: base.py
libs/docugraph/docugraph/embeddings/: base.py  endpoint_based.py  fastembed.py  langchain_based.py  openai.py  tei_endpoint_embed.py  voyageai.py
libs/docugraph/docugraph/indices/: base.py  vectorindex.py
libs/docugraph/docugraph/llms/: __init__.py  base.py  branching.py  cot.py  linear.py
libs/docugraph/docugraph/loaders/: adobe_loader.py  azureai_document_intelligence_loader.py  base.py  docling_loader.py  docx_loader.py  excel_loader.py  html_loader.py  mathpix_loader.py  ocr_loader.py  pdf_loader.py  txt_loader.py  unstructured_loader.py  web_loader.py
libs/docugraph/docugraph/parsers/: regex_extractor.py
libs/docugraph/docugraph/rerankings/: base.py  cohere.py  tei_fast_rerank.py  voyageai.py
libs/docugraph/tests/: _test_multimodal_reader.py  simple_pipeline.py  test_agent.py  test_composite.py  test_cot.py  test_docstores.py  test_documents.py  test_embedding_models.py  test_indexing_retrieval.py  test_ingestor.py  test_llms_chat_models.py  test_llms_completion_models.py  test_mcp_manager.py  test_mcp_tools.py  test_post_processing.py  test_prompt.py  test_promptui.py  test_reader.py  test_reranking.py  test_splitter.py  test_table_reader.py  test_telemetry.py  test_template.py  test_tools.py  test_vectorstore.py
libs/ktem/: pyproject.toml
libs/ktem/ktem/: app.py  components.py  main.py
libs/ktem/ktem/assets/: __init__.py  theme.py
libs/ktem/ktem/embeddings/: manager.py
libs/ktem/ktem/index/: base.py
libs/ktem/ktem/llms/: manager.py
libs/ktem/ktem/mcp/: __init__.py  db.py  manager.py  ui.py
libs/ktem/ktem/pages/: help.py  setup.py
libs/ktem/ktem/reasoning/: base.py  react.py  rewoo.py  simple.py
libs/ktem/ktem/rerankings/: manager.py  ui.py
libs/ktem/ktem/utils/: conversation.py  render.py  visualize_cited.py
libs/ktem/ktem_tests/: test_qa.py
scratch/: clean.bat  fake_history.py  git_commit.bat  git_commit_links.bat  git_commit_no_kotaemon.bat  git_commit_readme.bat  git_commit_readme_awesome.bat  git_init.bat  wipe_git_history.bat
scripts/: run_windows.bat  update_windows.bat
templates/project-default/: cookiecutter.json
templates/project-default/{{cookiecutter.project_name}}/: README.md  setup.py
templates/project-default/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: pipeline.py
(+55 files in other folders)
