[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = []

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
tag_filter = "v?\\d+(\\.\\d+)*.*"

[project]
name = "docugraph-app"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "Docugraph App"
dependencies = [
    "docugraph[all]",
    "ktem"
]
authors = [
    { name = "@trducng", email = "john@sashimashi51-jpg.is" },
    { name = "@lone17", email = "ian@sashimashi51-jpg.is" },
    { name = "@taprosoft", email = "tadashi@sashimashi51-jpg.is" },
    { name = "@cin-albert", email = "albert@sashimashi51-jpg.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.uv.sources]
docugraph = { workspace = true }
ktem = { workspace = true }

# uv workspace configuration
[tool.uv.workspace]
members = ["libs/docugraph", "libs/ktem"]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "ipython",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "sphinx"
]

[project.urls]
Homepage = "https://sashimashi51-jpg.github.io/docugraph/"
Repository = "https://github.com/sashimashi51-jpg/docugraph/"
Documentation = "https://sashimashi51-jpg.github.io/docugraph/"

[tool.codespell]
skip = "*.js,*.css,*.map"
# `llm` abbreviation for large language models
ignore-words-list = "llm,fo"
quiet-level = 3
check-filenames = ""

[tool.isort]
known_first_party = ["docugraph"]
